--- a/uncommitted_quiz/templates/base.html
+++ b/uncommitted_quiz/templates/base.html
@@ -1,4 +1,3 @@
-truncatechars_html  
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -30,8 +29,8 @@ truncatechars_html
                 <h1>The Uncommitted</h1>
                 <nav>
                     <ul>
-                        <li><a href="{% url 'home' %}">Home</a></li>
-                        <li><a href="{% url 'quiz_list' %}">Quizzes</a></li>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Quizzes</a></li>
                         
                     </ul>
                 </nav>
