--- a/uncommitted_quiz/templates/base.html
+++ b/uncommitted_quiz/templates/base.html
@@ -1,4 +1,3 @@
-truncatechars_html  
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -14,10 +13,10 @@ truncatechars_html
         {% endblock %}
     
         {% block corecss %}
-            <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-            <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-            <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
-            <link rel="stylesheet" href="{% static 'css/quiz.css' %}">
+        <style>
+            body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
+            button { padding: 10px 20px; margin: 10px; cursor: pointer; }
+        </style>
         {% endblock %}
         
         {% block extra_css %}{% endblock %} 
@@ -30,8 +29,8 @@ truncatechars_html
                 <h1>The Uncommitted</h1>
                 <nav>
                     <ul>
-                        <li><a href="{% url 'home' %}">Home</a></li>
-                        <li><a href="{% url 'quiz_list' %}">Quizzes</a></li>
+                        <li><a href="{% url 'index' %}">Home</a></li>
+                        <li><a href="#">Quizzes</a></li>
                         
                     </ul>
                 </nav>
@@ -45,8 +44,7 @@ truncatechars_html
             </footer>
         </div>    
         {% block corejs %}
-            <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-            <script src="{% static 'js/scripts.js' %}"></script>
+          
         {% endblock %}
         {% block extra_js %}{% endblock %}
     </body>
