Upadte Quiz template

--- a/uncommitted_quiz/templates/base.html
+++ b/uncommitted_quiz/templates/base.html
@@ -30,7 +30,7 @@
                 <nav>
                     <ul>
                         <li><a href="{% url 'index' %}">Home</a></li>
-                        <li><a href="#">Quizzes</a></li>
+                        <li><a href="{% url 'quiz' %}">Quizzes</a></li>
                         
                     </ul>
                 </nav>
