--- a/uncommitted_quiz/templates/about.html
+++ b/uncommitted_quiz/templates/about.html
@@ -1,1 +1,10 @@
-<p>This is the about page for the developers of the application. </p>
+{% extends "base.html" %}
+{% load static %}
+
+{% block title %}About | The Uncommitted Quiz{% endblock %}
+
+{% block content %}
+    <div class="about-section">
+        <h2>This is the about page for the developers of the application.</h2>
+    </div>
+{% endblock %}
