--- a/uncommitted_quiz/templates/base.html
+++ b/uncommitted_quiz/templates/base.html
@@ -28,8 +28,8 @@
                         <h1>The Uncommitted Quiz</h1>
                     </div>
                     <nav class="top-nav">
-                        <a href="">Home</a>
-                        <a href="">About</a>
+                        <a href="{% url 'home' %}">Home</a>
+                        <a href="{% url 'about' %}">About</a>
                     </nav>
                 </div>
             </header>
