--- a/uncommitted_quiz/templates/base.html
+++ b/uncommitted_quiz/templates/base.html
@@ -31,6 +31,17 @@
                         <a href="{% url 'home' %}">Home</a>
                         <a href="{% url 'about' %}">About</a>
                     </nav>
+                    <!-- Hamburger Menu Button -->
+                    <div class="hamburger" id="hamburger-menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <!-- Mobile Dropdown Menu -->
+                <div class="mobile-menu" id="mobile-menu">
+                    <a href="{% url 'home' %}">Home</a>
+                    <a href="{% url 'about' %}">About</a>
                 </div>
             </header>
 
