removed css from about, placing them into base css, update js to pass jshint

--- a/project/templates/end.html
+++ b/project/templates/end.html
@@ -15,7 +15,7 @@
 
     <p style="margin-top: 1rem;">
         For more information on the subject: 
-        <a href="https://impostorsyndrome.com/resources/" target="_blank" rel="noopener">
+        <a href="https://impostorsyndrome.com/resources/" target="_blank" rel="noopener" class="orange-hover">
             Imposter Syndrome Institute
         </a>
     </p>
