--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -14,6 +14,7 @@
     
         {% block corecss %}
         <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
         {% endblock %}
         
         {% block extra_css %}{% endblock %} 
@@ -25,7 +26,11 @@
             <header class="site-header">
                 <div class="header-inner">
                     <div class="logo">
-                        <h1>The Uncommitted Quiz</h1>
+                        <h1>
+                            <a href="/" class="logo-link">
+                                The Uncommitted Quiz
+                            </a>
+                        </h1>
                     </div>
                     <nav class="top-nav">
                         <a href="{% url 'home' %}">Home</a>
