Update GitHub icon classes in about.html and switch to Bootstrap Icons in base.html

--- a/project/templates/about.html
+++ b/project/templates/about.html
@@ -11,7 +11,7 @@
         <div class="member-info">
             <h3>Mark Butler</h3>
             <p>Backend wizard and database architect.</p>
-            <a class="github-icon" href="https://github.com/Mbutler1991" target="_blank"><i class="fab fa-github"></i></a>
+            <a class="github-icon" href="https://github.com/Mbutler1991" target="_blank"><i class="bi bi-github"></i></a>
         </div>
     </div>
     <div class="member-card">
@@ -19,7 +19,7 @@
         <div class="member-info">
             <h3>Jawahir Abdul Bari</h3>
             <p>Frontend queen.</p>
-            <a class="github-icon" href="https://github.com/Jawahir01" target="_blank"><i class="fab fa-github"></i></a>
+            <a class="github-icon" href="https://github.com/Jawahir01" target="_blank"><i class="bi bi-github"></i></a>
         </div>
     </div>
     <div class="member-card">
@@ -27,7 +27,7 @@
         <div class="member-info">
             <h3>Mirjane Cale</h3>
             <p>The artist.</p>
-            <a class="github-icon" href="https://github.com/mirjanacale" target="_blank"><i class="fab fa-github"></i></a>
+            <a class="github-icon" href="https://github.com/mirjanacale" target="_blank"><i class="bi bi-github"></i></a>
         </div>
     </div>
     <div class="member-card">
@@ -35,7 +35,7 @@
         <div class="member-info">
             <h3>Ojarvey Lowman</h3>
             <p>Brings the vibes and creativity to the team.</p>
-            <a class="github-icon" href="https://github.com/OJarvey" target="_blank"><i class="fab fa-github"></i></a>
+            <a class="github-icon" href="https://github.com/OJarvey" target="_blank"><i class="bi bi-github"></i></a>
         </div>
     </div>
 </div>
