--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -14,7 +14,7 @@
     
         {% block corecss %}
         <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
         {% endblock %}
         
         {% block extra_css %}{% endblock %} 
