--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -11,6 +11,13 @@
             <meta name="author" content="2504-hackathon-team5">
             <meta name="robots" content="index, follow">
         {% endblock %}
+
+        <!-- Favicons -->
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'media/favicon/apple-touch-icon.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'media/favicon/favicon-32x32.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'media/favicon/favicon-16x16.png' %}">
+        <link rel="icon" type="image/png" sizes="192x192" href="{% static 'media/favicon/android-chrome-192x192.png' %}">
+        <link rel="icon" type="image/png" sizes="512x512" href="{% static 'media/favicon/android-chrome-512x512.png' %}">
     
         {% block corecss %}
         <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css">
